--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -2,8 +2,12 @@
     {{ title }}
 </h2>
 
+<h3 *ngIf="message">
+    {{ message }}
+</h3>
+
 <div class="right">
-    {{ productsNb$ | async }} products |
+    {{ productsNb$ | async }} products <span *ngIf="filtered$ | async">(filtered)</span> |
 
     {favourites, plural,
     =0 {no favourite}
@@ -12,25 +16,31 @@
     }
 </div>
 <div> 
-    <!-- Search: <input type="text" [formControl]="filter" placeholder="filter by name"> -->
-    &nbsp;
+    Search: <input type="text" [formControl]="filter" placeholder="filter by name">
 </div>
 
-<ng-template #loading>
-    <h2 class="loading">Loading products</h2>
-</ng-template>
+<div *ngIf="filteredProducts$ | withLoading | async as obs">
+    <ng-template [ngIf]="obs.value">
+        <ul class="products">
+            <li *ngFor="let product of obs.value | slice:start:end"
+                (click)="onSelect(product)"
+                [class.discontinued]="product.discontinued"
+                [class.selected]="selectedProduct === product"
+                [title]="product | json">
+                <span class="name">{{ product.name | uppercase }}</span>
+                <span class="description">{{ product.description }}</span>
+                <span class="price">{{ product.price | currency:'CAD':'symbol-narrow':'.2' }}</span>
+            </li>
+        </ul>
+    </ng-template>
+    <ng-template [ngIf]="obs.error">
+        <h2 class="errorMessage">Error! {{ obs.error }}</h2>
+    </ng-template>
+    <ng-template [ngIf]="obs.loading">
+        <h2 class="loading">Loading products</h2>
+    </ng-template>
+</div>
 
-<ul class="products" *ngIf="products$ | async as products;else loading">
-    <li *ngFor="let product of products | slice:start:end"
-        (click)="onSelect(product)"
-        [class.discontinued]="product.discontinued"
-        [class.selected]="selectedProduct === product"
-        [title]="product | json">
-        <span class="name">{{ product.name | uppercase }}</span>
-        <span class="description">{{ product.description }}</span>
-        <span class="price">{{ product.price | currency:'CAD':'symbol-narrow':'.2' }}</span>
-    </li>
-</ul>
 
 <div class="right">
     <button (click)="refresh()">Refresh List</button>&nbsp;
